[package]
name          = "esp-radio-rtos-driver"
version       = "0.2.0"
edition       = "2024"
rust-version  = "1.86.0"
description   = "Task scheduler interface for esp-radio"
documentation = "https://docs.espressif.com/projects/rust/esp-radio-rtos-driver/latest/"
keywords      = ["esp32", "espressif", "no-std"]
categories    = ["embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[package.metadata.espressif]
check-configs = [{ features = [] }]
clippy-configs = [{ features = [] }]

[target."cfg(target_has_atomic = \"32\")".dependencies]
portable-atomic = "1"

# No atomic CAS

[target."cfg(not(target_has_atomic = \"32\"))".dependencies]
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

[dependencies]
esp-sync = { version = "0.1.1", path = "../esp-sync", optional = true }
cfg-if = "1"

# Logging interfaces, they are mutually exclusive so they need to be behind separate features.
defmt  = { version = "1.0", optional = true }
log-04 = { package = "log", version = "0.4", optional = true }

[features]
ipc-implementations = ["esp-sync"]
# One of the following features must be enabled to select the target chip, if the `ipc-implementations` feature is enabled.
esp32 = ["esp-sync?/esp32"]
esp32c2 = ["esp-sync?/esp32c2"]
esp32c3 = ["esp-sync?/esp32c3"]
esp32c5 = ["esp-sync?/esp32c5"]
esp32c6 = ["esp-sync?/esp32c6"]
esp32h2 = ["esp-sync?/esp32h2"]
esp32s2 = ["esp-sync?/esp32s2"]
esp32s3 = ["esp-sync?/esp32s3"]

# Logging Feature Flags
log-04 = ["dep:log-04"]
defmt = ["dep:defmt"]
