[package]
name = "esp-radio"
version = "0.15.0"
edition = "2024"
rust-version  = "1.88.0"
description = "A WiFi, Bluetooth and ESP-NOW driver for use with Espressif chips and bare-metal Rust"
documentation = "https://docs.espressif.com/projects/rust/esp-wifi/latest/"
keywords = ["wifi", "bluetooth", "esp-now", "esp32", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/esp-rs/esp-hal"
license = "MIT OR Apache-2.0"

[package.metadata.espressif]
doc-config = { features = ["esp-hal/unstable", "esp-hal/rt", "defmt"], append = [
    { if = 'chip_has("wifi")', features = ["wifi", "wifi-eap", "esp-now", "sniffer", "smoltcp/proto-ipv4", "smoltcp/proto-ipv6"] },
    { if = 'chip_has("bt")', features = ["ble"] },
    { if = 'chip_has("ieee802154")', features = ["ieee802154", "__docs_build"] },
    { if = 'chip_has("wifi") && chip_has("bt")', features = ["coex"] },
    { if = 'chip_has("wifi") || chip_has("bt") || chip_has("ieee802154")', features = ["unstable"] },
] }
check-configs = [
    { features = ["esp-hal/unstable", "esp-hal/rt"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "defmt"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "wifi"], if = 'chip_has("wifi")' },
    { features = ["esp-hal/unstable", "esp-hal/rt", "unstable", "defmt", "wifi", "wifi-eap", "esp-now", "sniffer", "smoltcp/proto-ipv4", "smoltcp/proto-ipv6"], if = 'chip_has("wifi")' },
    { features = ["esp-hal/unstable", "esp-hal/rt", "unstable", "ble"], if = 'chip_has("bt")' },
    { features = ["esp-hal/unstable", "esp-hal/rt", "unstable", "ieee802154"], if = 'chip_has("ieee802154")' },
    { features = ["esp-hal/unstable", "esp-hal/rt", "unstable", "defmt", "wifi", "wifi-eap", "esp-now", "sniffer", "smoltcp/proto-ipv4", "smoltcp/proto-ipv6", "ble", "coex"], if = 'chip_has("wifi") && chip_has("bt")' },
    { features = ["esp-hal/unstable", "esp-hal/rt", "wifi-eap", "unstable"], if = 'chip_has("wifi")' },
]
clippy-configs = [
    { features = ["esp-hal/unstable", "esp-hal/rt"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "wifi", "wifi-eap", "unstable"], if = 'chip_has("wifi")', append = [
        { features = ["ble"], if = 'chip_has("bt")' },
    ] },
]

[lib]
bench = false
test  = false

[dependencies]
esp-hal = { version = "1.0.0-rc.0", path = "../esp-hal", default-features = false, features = ["requires-unstable"] }
cfg-if = "1.0.0"
portable-atomic = { version = "1.11.0", default-features = false }
enumset = { version = "1.1.6", default-features = false, optional = true }

# ⚠️ Unstable dependencies
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = "0.6.1"
esp-radio-rtos-driver = { version = "0.0.1", path = "../esp-radio-rtos-driver" }
instability = "0.3.9"

# Unstable dependencies that are not (strictly) part of the public API
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
document-features  = "0.2.11"
esp-alloc = { version = "0.8.0", path = "../esp-alloc", optional = true }
esp-config = { version = "0.5.0", path = "../esp-config" }
esp-metadata-generated = { version = "0.1.0", path = "../esp-metadata-generated" }
esp-sync = { version = "0.0.0", path = "../esp-sync" }
esp-phy = { path = "../esp-phy/" }
esp-wifi-sys = { version = "0.8.1" }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
portable_atomic_enum = { version = "0.3.1", features = ["portable-atomic"] }
procmacros = { version = "0.19.0", package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
xtensa-lx-rt = { version = "0.20.0", path = "../xtensa-lx-rt", optional = true }
byte = { version = "0.2.7", optional = true }
ieee802154 = { version = "0.6.1", optional = true }
heapless = "0.9"

# Optional dependencies enabling ecosystem features
serde = { version = "1.0.218", default-features = false, features = ["derive"], optional = true }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "socket-raw",
], optional = true }
embassy-net-driver = { version = "0.2.0", optional = true }
bt-hci = { version = "0.6.0", optional = true }

# Logging interfaces, they are mutually exclusive so they need to be behind separate features.
defmt = { version = "1.0.1", optional = true }
log-04 = { package = "log", version = "0.4.27", optional = true }

[build-dependencies]
esp-config = { version = "0.5.0", path = "../esp-config", features = ["build"] }
esp-metadata-generated = { version = "0.1.0", path = "../esp-metadata-generated", features = ["build-script"] }

[features]
default = ["esp-alloc"]

# Chip Support Feature Flags
# Target the ESP32-C2.
esp32c2 = [
  "esp-hal/esp32c2",
  "esp-phy/esp32c2",
  "esp-wifi-sys/esp32c2",
  "esp-metadata-generated/esp32c2",
]
# Target the ESP32-C3.
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-phy/esp32c3",
  "esp-wifi-sys/esp32c3",
  "esp-metadata-generated/esp32c3",
]
# Target the ESP32-C6.
esp32c6 = [
  "esp-hal/esp32c6",
  "esp-phy/esp32c6",
  "esp-wifi-sys/esp32c6",
  "esp-metadata-generated/esp32c6",
]
# Target the ESP32-H2.
esp32h2 = [
  "esp-hal/esp32h2",
  "esp-phy/esp32h2",
  "esp-wifi-sys/esp32h2",
  "esp-metadata-generated/esp32h2",
]
# Target the ESP32.
esp32 = [
  "esp-hal/esp32",
  "esp-phy/esp32",
  "esp-wifi-sys/esp32",
  "esp-metadata-generated/esp32",
  "xtensa-lx-rt/float-save-restore",
]
# Target the ESP32-S2.
esp32s2 = [
  "esp-hal/esp32s2",
  "esp-phy/esp32s2",
  "esp-wifi-sys/esp32s2",
  "esp-metadata-generated/esp32s2",
  "xtensa-lx-rt/float-save-restore",
]
# Target the ESP32-S3.
esp32s3 = [
  "esp-hal/esp32s3",
  "esp-phy/esp32s3",
  "esp-wifi-sys/esp32s3",
  "esp-metadata-generated/esp32s3",
  "xtensa-lx-rt/float-save-restore",
]

## Use `esp-alloc` with the `compat` feature for dynamic allocations.
##
## If you opt-out, you need to provide implementations for the following functions:
## - `pub extern "C" fn malloc(size: usize) -> *mut u8`
## - `pub extern "C" fn malloc_internal(size: usize) -> *mut u8`
## - `pub extern "C" fn free(ptr: *mut u8)`
## - `pub extern "C" fn free_internal(ptr: *mut u8)`
## - `pub extern "C" fn calloc(number: u32, size: usize) -> *mut u8`
## - `pub extern "C" fn calloc_internal(number: u32, size: usize) -> *mut u8`
## - `pub extern "C" fn realloc(ptr: *mut u8, new_size: usize) -> *mut u8`
## - `pub extern "C" fn get_free_internal_heap_size() -> usize;`
esp-alloc = ["dep:esp-alloc"]

## Logs the WiFi logs from the driver at log level info (needs a nightly-compiler)
sys-logs = ["esp-wifi-sys/sys-logs"]

#! ### Wireless Feature Flags

## Enable WiFi support
wifi = ["dep:enumset", "dep:embassy-net-driver"]

## Enable WiFi Enterprise Authentication Protocol (EAP) support
wifi-eap = ["wifi"]

## Enable esp-now support
esp-now = ["wifi"]

## Enable sniffer mode support
sniffer = ["wifi"]

## Enable BLE support
ble = ["esp-hal/__bluetooth", "dep:bt-hci"]

## Software controls Wi-Fi/Bluetooth coexistence.
## See [ESP-IDF Programming Guide](https://docs.espressif.com/projects/esp-idf/en/stable/esp32/api-reference/kconfig-reference.html#config-esp-coex-sw-coexist-enable) for details
coex = []

## Enable WiFi channel state information. See [ESP-IDF Programming Guide](https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/network/esp_wifi.html#_CPPv4N18wifi_init_config_t10csi_enableE),
csi = []

## Use IEEE 802.15.4.
## Cannot be used together with Wi-Fi.
ieee802154 = ["dep:byte", "dep:ieee802154"]

#! ### Ecosystem Feature Flags

## Provide implementations of smoltcp traits
smoltcp = ["dep:smoltcp"]

## Implement serde Serialize / Deserialize
serde = ["dep:serde", "enumset?/serde"]

#! ### Logging Feature Flags
## Enable logging output using version 0.4 of the `log` crate.
log-04 = ["dep:log-04", "esp-hal/log-04", "esp-wifi-sys/log"]

## Enable logging output using `defmt` and implement `defmt::Format` on certain types.
defmt = ["dep:defmt", "smoltcp?/defmt", "esp-hal/defmt", "bt-hci?/defmt", "esp-wifi-sys/defmt", "enumset/defmt", "heapless/defmt", "esp-sync/defmt"]

#! ### Unstable APIs
#! Unstable APIs are drivers and features that are not yet ready for general use.
#! They may be incomplete, have bugs, or be subject to change without notice.
unstable = []

## Libraries that depend on `esp-radio` should enable this feature to indicate their use of unstable APIs.
## However, they must **not** enable the `unstable` feature themselves.
##
## For development you can enable the `unstable` and the chip feature by adding esp-radio as a dev-dependency.
requires-unstable = []

# These features are considered private and unstable. They are not covered by
# semver guarantees and may change or be removed without notice.
__docs_build = []

[package.metadata.docs.rs]
features = [
  "esp32c3",
  "wifi",
  "ble",
  "coex",
  "esp-hal/default",
]
default-target = "riscv32imc-unknown-none-elf"

# `esp-alloc` and `xtensa-lx-rt` are hidden behind features so `cargo machete` incorrectly marks it as unused.
[package.metadata.cargo-machete]
ignored = ["esp-alloc", "xtensa-lx-rt"]
