[package]
name          = "esp-riscv-rt"
version       = "0.12.0"
edition       = "2024"
rust-version  = "1.86.0"
description   = "Minimal runtime / startup for RISC-V CPUs from Espressif"
documentation = "https://docs.espressif.com/projects/rust/esp-riscv-rt/latest/"
keywords      = ["esp32", "espressif", "riscv", "runtime", "startup"]
categories    = ["embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"
links         = "esp-riscv-rt"

[lib]
bench = false
test  = false

[dependencies]
document-features = "0.2.11"
defmt             = {version = "1.0.1", optional = true}
riscv             = "0.14.0"
# TODO wait for a release
riscv-rt          = {version = "0.15.0", git = "https://github.com/rust-embedded/riscv.git", rev = "f81db37f67829161f5c58e29140fa7f073e4c7e3", features = ["pre-init", "no-exceptions", "no-interrupts", "single-hart", "v-trap"]}

[features]
## Indicate that the device does NOT support `mie` and `mip` CSRs.
no-mie-mip = ["riscv-rt/no-xie-xip"]
## Indicate that the device has RTC RAM.
rtc-ram = []

## Implement `defmt::Format`
defmt = ["dep:defmt"]

# This feature is intended for testing; you probably don't want to enable it:
ci = ["rtc-ram"]
