[package]
name          = "esp-rom-sys"
version       = "0.1.3"
edition       = "2024"
rust-version  = "1.87.0"
description   = "ROM code support"
documentation = "https://docs.espressif.com/projects/rust/esp-rom-sys/latest/"
keywords      = ["embedded", "esp32", "espressif"]
categories    = ["embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

links         = "esp_rom_sys"

[package.metadata.espressif]
forever-unstable = true
check-configs = [{ features = [] }]
clippy-configs = [{ features = [] }]
semver-config = { features = ["__internal_rom_symbols"]}

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["esp32c6"]

[lib]
bench = false
test  = false

[dependencies]
cfg-if              = "1"
document-features   = "0.2"

[build-dependencies]
esp-metadata-generated = { version = "0.3.0", path = "../esp-metadata-generated", features = ["build-script"] }

[features]
__internal_rom_symbols = []

#! ### Chip selection
#! One of the following features must be enabled to select the target chip:

##
esp32   = []
##
esp32c2 = []
##
esp32c3 = []
##
esp32c6 = []
##
esp32h2 = []
##
esp32s2 = []
##
esp32s3 = []
